--- a/trakberry/templates/test_update7.html
+++ b/trakberry/templates/test_update7.html
@@ -9,7 +9,10 @@
 	</style>
 <br><br><br><br><br><br>
 <center>
-<img src="/static/media/loading.gif?{{TCURR}}">
+<img src="/static/media/loading2.png?{{request.session.TCURR}}"><br>
+<img src="/static/media/loading.gif?{{request.session.TCURR}}">
+
+
 </center>
 
 <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/{{request.session.working_address}}" />
