--- a/trakberry/templates/scrap_edit_categories_entry.html
+++ b/trakberry/templates/scrap_edit_categories_entry.html
@@ -1,6 +1,6 @@
 {% extends "scrap_mgmt.html" %}
 
-{% block content2 %}
+{% block content %}
 
 <!-- <form action="" method="post">{% csrf_token %} -->
 
