updated supervisor names in app

--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -19,12 +19,14 @@
 	<option value="Nathan Klein-Geltink">Nathan Klein-Geltink</option>
 	<option value="Andrew Smith">Andrew Smith</option>
 	<option value="Chris Dufton">Chris Dufton</option>
+	<option value="Chris Smith">Chris Smith</option>
 	<option value="Dave Godbout">Dave Godbout</option>
 	<option value="Dave Milne">Dave Milne</option>
 	<option value="Dillon Hawthorn">Dillon Hawthorn</option>
 	<option value="Don Barber">Don Barber</option>
 	<option value="Gary Harvey">Gary Harvey</option>
 	<option value="Jason Skillings">Jason Skillings</option>
+	<option value="Jayson Oliver">Jayson Oliver</option>
 	<option value="Julie Reid">Julie Reid</option>
 	<option value="Ken Frey">Ken Frey</option>
 	<option value="Kevin Baker">Kevin Baker</option>
