--- a/trakberry/templates/test5.html
+++ b/trakberry/templates/test5.html
@@ -9,16 +9,16 @@
 <table> 
 
 
-{% for item in a %}
+{% for item in d %}
 	<tr>
 	{% for x in item %}
 		<td bgcolor="#CCDDE3" style="font-size:12px;">{{x}}  </td>
+
 	{% endfor %}
 	</tr>
 {% endfor %}
 
 </table>
 <br><br><br>
-B : {{b}}  <br>
-a[i] : {{AA}}
+
 </body></html>
