working on 1703 Live

--- a/trakberry/templates/test_2.html
+++ b/trakberry/templates/test_2.html
@@ -3,11 +3,7 @@
 <!-- Redirect page back to url call of '/trakberry/test' going to display view and back to this page  -->
 <!-- Do this to update time and information from database reads  -->
 
-<font size="3" color="black">
-
-{% for i in request.session.test9 %}
-{{i}}<br>
-{% endfor %}
+{{GList}}
 <br><br>
 
 </font>
