--- a/trakberry/templates/test57.html
+++ b/trakberry/templates/test57.html
@@ -2,9 +2,10 @@
 <body>
 
 <br><br>
-Current Month: {{request.session.current_month}}
-<br>
-Current Test :{{request.session.current_test}}
-<br>
+{% for i in e %}
+{{i}}
 
+<br>
+{% endfor %}
+<br><br><br><br>
 </body></html>
