--- a/trakberry/templates/prod_ab1v_reaction.html
+++ b/trakberry/templates/prod_ab1v_reaction.html
@@ -191,15 +191,15 @@
 				<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#fefffa;vertical-align:middle;" onclick="prod_10R()"> CURRENT WEEK </button> </center>
 			</td>
             <tr><th rowspan="2"><center>Part</center></th>
-                {% for i in request.session.pdate_5404a %}
+                {% for i in request.session.pdate_5399y %}
                     <th colspan="3"><center>{{i}}</center></th>
                 {% endfor %}
 				<th rowspan="2"><center>Week Totals</center></th>
 				<th rowspan="2"><center>Goal To Date</center></th>
 
             </tr><tr>
-                {% for i in request.session.pdate_5404a %}
-                    {% for ii in request.session.shift_5404a %}
+                {% for i in request.session.pdate_5399y %}
+                    {% for ii in request.session.shift_5399y %}
                         <th><center>{{ii}}</center></th>
                     {% endfor %}
                 {% endfor %}
