added two techs

--- a/trakberry/templates/tech_login.html
+++ b/trakberry/templates/tech_login.html
@@ -21,7 +21,7 @@
 
 <b><u>Tech Name</b></u>&nbsp;
 <select name ="user">
-	<option value="Chris Coakley">Chris Coakley</option>
+	
 	<option value="Dave McLaren">Dave McLaren</option>
 	<option value="Ervin Kuepfer">Ervin Kuepfer</option>
 	<option value="Jered Pankratz">Jered Pankratz</option>
@@ -30,6 +30,7 @@
 	<option value="Jonathan Brunk">Jonathan Brunk</option>
 	<option value="Jeremy Bourque">Jeremy Bourque</option>	
 	<option value="Jim Barker">Jim Barker</option>
+	<option value="Jimanie Tulloch">Jimanie Tulloch</option>
 	<option value="Karissa St.Pierre">Karissa St.Pierre</option>
 	<option value="Mayank Gehlot">Mayank Gehlot</option>
 	<option value="Muoi Le">Muoi Le</option>
@@ -37,6 +38,7 @@
 	<option value="Rob Wood">Rob Wood</option>
 	<option value="Scott Smith">Scott Smith</option>
 	<option value="Scott Warner">Scott Warner</option>	
+	<option value="Surjit Toora">Surjit Toora</option>
 	<option value="Terry Kennedy">Terry Kennedy</option>
 	<option value="Toby Kuepfer">Toby Kuepfer</option>
 	
