update work on maintsupervisor section

--- a/trakberry/templates/maint_TV.html
+++ b/trakberry/templates/maint_TV.html
@@ -27,6 +27,12 @@
 
     .frameA {color:black;text-align:center;float:left;width:95%;margin-bottom: 5px;}
     
+	body {
+    -moz-transform: scale(0.8, 0.8); /* Moz-browsers */
+    zoom: 0.8; /* Other non-webkit browsers */
+    zoom: 80%; /* Webkit browsers */
+}
+
 </style>
 <style>   
 	#prodsum {
@@ -47,7 +53,9 @@
 		text-align: left;
 		background-color: rgb(68, 82, 91);
 		color: white;
-	}
+
+
+
 </style>
 
   <title>Maint Jobs</title>
