--- a/trakberry/templates/supervisor.html
+++ b/trakberry/templates/supervisor.html
@@ -22,7 +22,12 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 </style>
 <!-- **************************** -->
 
-
+<style type="text/css">
+    .mainset{color:black;text-align:center;float:left;width:100%}
+    .wrapper_main {background:chartreuse;width:100%;margin-left: 3px;}
+    .frame1 {color:black;text-align:center;float:left;width:80%;}
+	.frame2 {color:black;text-align:center;float:left;width:18%;}
+</style>
 
 <body style="background-color:powderblue;">
 <!--
@@ -88,7 +93,8 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
   
 
   
-  
+<div class="wrapper_main">
+<div class="frame1">
 
 <form action="" method="post">{% csrf_token %}
 
@@ -166,7 +172,44 @@ E3E2C3
 
 </table>
 
-  
+</div>
+
+
+<div class="frame2">
+	<table style="width:100%;">
+		<tr><th colspan="2" bgcolor="#B6D6E0" style="font-size: 160%;">
+			<center><u><font color="#000000">Maintenance</u></center>
+		</th></tr>
+
+		<tr><th>Maintenance</th><th>On Job</th><th>Job</th><th>Priority</th></tr>
+
+
+		{% for x in request.session.assigned %}
+		<tr><td><b><font color="#000000" style="font-size:90%;">{{x}}</font></td>
+			<td><b><font color="#000000" style="font-size: 90%;">yes</font></b></td></tr>
+		{% endfor %}
+
+
+
+
+		{% for x in request.session.not_assigned %}
+		<tr><td><b><font color="#000000" style="font-size: 90%;">{{x}}</font></td>
+			<td><font color="#000000" style="font-size: 90%;">no</font></b></td></tr>
+		{% endfor %}
+
+
+
+
+		</table>
+
+
+
+		
+
+</div>
+
+
+</div>
   
 {% endblock %}
 
