--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -182,6 +182,7 @@
 										<li><a href="{{request.session.local_toggle}}/test_email_7">test_email_7</a></li>  
 										<li><a href="{{request.session.local_toggle}}/track_single">track_single</a></li>  
 										<li><a href="{{request.session.local_toggle}}/prod_ab1v_reaction">track_1703 / 1704</a></li>  
+										<li><a href="{{request.session.local_toggle}}/tech_pm_add">Tech PM Add</a></li>  
 									</ul>  
 								</li>
 
