--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -19,14 +19,14 @@
 	<option value="Nathan Klein-Geltink">Nathan Klein-Geltink</option>
 	<option value="Andrew Smith">Andrew Smith</option>
 	<option value="Chris Dufton">Chris Dufton</option>
-	<option value="Chris Smith">Chris Smith</option>
 	<option value="Dave Godbout">Dave Godbout</option>
+    <option value="Dave McLaren">Dave McLaren</option>
 	<option value="Dave Milne">Dave Milne</option>
 	<option value="Dillon Hawthorn">Dillon Hawthorn</option>
 	<option value="Don Barber">Don Barber</option>
+    <option value="Evan George">Evan George</option>
 	<option value="Gary Harvey">Gary Harvey</option>
 	<option value="Jason Skillings">Jason Skillings</option>
-	<option value="Jayson Oliver">Jayson Oliver</option>
 	<option value="Julie Reid">Julie Reid</option>
 	<option value="Ken Frey">Ken Frey</option>
 	<option value="Kevin Baker">Kevin Baker</option>
@@ -35,6 +35,7 @@
 	<option value="Rick Wurm">Rick Wurm</option>
 	<option value="Rob Zylstra">Rob Zylstra</option>
 	<option value="Robin Melville">Robin Melville</option>
+    <option value="Saurabh Bhardwaj">Saurabh Bhardwaj</option>
 	<option value="Scott Brownlee">Scott Brownlee</option>
 	<option value="Scott Herman">Scott Herman</option>
 	<option value="Scott McMahon">Scott McMahon</option>
