--- a/trakberry/templates/prod_10R.html
+++ b/trakberry/templates/prod_10R.html
@@ -33,7 +33,7 @@
 </style>
 
 <script>
-	function prod_10R_prev(){location.replace("{{request.session.local_toggle}}/update7")}
+	function prod_10R_prev(){location.replace("{{request.session.local_toggle}}/update7_prev")}
 	function prod_10R(){location.replace("{{request.session.local_toggle}}/update7")}
 </script>
 
